Added main authentication routes & functionalities

--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,7 @@ NODE_ENV=development
 PORT=5000
 
 MONGO_URI=mongodb+srv://webapp:Eugene&96@tff0-lzwgt.mongodb.net/thoughtforfood?retryWrites=true&w=majority
+
+JWT_SECRET=vbhw23ekln2g35iyd3c94w7
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
