Forgot, reset, update password routes and functionalities

--- a/config/config.env
+++ b/config/config.env
@@ -6,3 +6,10 @@ MONGO_URI=mongodb+srv://webapp:Eugene&96@tff0-lzwgt.mongodb.net/thoughtforfood?r
 JWT_SECRET=vbhw23ekln2g35iyd3c94w7
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=307b4c27c7f1dc
+SMTP_PASSWORD=cc18568e27c3fe
+FROM_EMAIL=noreply@thoughtforfood.io
+FROM_NAME=ThoughtForFood
